--- a/BigShop/appsettings.json
+++ b/BigShop/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Data Source=DESKTOP-1UFKE0B;Initial Catalog=BigShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Pooling=False"
+    "Connection": "Data Source=wpl41.hosting.reg.ru; Database=u1615121_dina; Integrated Security=False; User ID=u1615121_admin; Password=Zz53au0&"
   }
 }
