--- a/BigShop/web.config
+++ b/BigShop/web.config
@@ -5,5 +5,17 @@
 			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 		</handlers>
 		<aspNetCore processPath="dotnet" arguments=".\WebApplication.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false" hostingModel="InProcess" />
+		<rewrite>
+			<rules>
+				<rule name="Redirect from https to http" stopProcessing="true">
+					<match url="(.*)" />
+					<conditions>
+						<add input="{HTTPS}" pattern="on" ignoreCase="true" />
+						<add input="{SERVER_PORT}" pattern="443" negate="false" />
+					</conditions>
+					<action type="Redirect" url="http://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" />
+				</rule>
+			</rules>
+		</rewrite>
 	</system.webServer>
 </configuration>
